src/test/ui/issue-38875/issue_38875.stderr
error[E0080]: constant evaluation error
  --> $DIR/auxiliary/issue_38875_b.rs:11:24
   |
LL | pub const FOO: usize = *&0;
   |                        ^^^ unimplemented constant expression: deref operation
   |
note: for constant expression here
  --> $DIR/issue_38875.rs:16:22
   |
LL |     let test_x = [0; issue_38875_b::FOO];
   |                      ^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
